pingpong-log-output/manifests/log_output.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: pingpong-files-claim
        - name: reader-files
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
      containers:
      - name: hash-generator
        image: sirpacoder/hash-generator:v2.1
        imagePullPolicy: Always
        volumeMounts:
          - name: shared-files
            mountPath: /usr/src/app/shared/files
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "500m"
      - name: hash-reader
        image: sirpacoder/hash-reader:v2.1
        imagePullPolicy: Always
        volumeMounts:
          - name: shared-files
            mountPath: /usr/src/app/shared/files
          - name: reader-files
            mountPath: /usr/src/app/reader/info
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  selector:
    app: log-output
  ports:
  - name: http
    port: 30081
    protocol: TCP
    targetPort: 3001
