pingpong-log-output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-log-output-ingress
  labels:
    name: pingpong-log-output
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 30081
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 30081
      - path: /pings
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 30081
